+movement & out of bounds detection